manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: dev
spec:
  rules:
  - host: localhost
    http:
      paths:
        - path: /docs
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8000
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8000
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
